--- a/api/package.json
+++ b/api/package.json
@@ -4,17 +4,22 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "queue":"nodemon src/queue.js",
     "dev": "nodemon src/server.js",
     "dev:debug": "nodemon --inspect src/server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bee-queue": "^1.3.1",
     "body-parser": "^1.19.0",
     "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.9",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.17",
+    "nodemailer-express-handlebars": "^4.0.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
