--- a/api/package.json
+++ b/api/package.json
@@ -4,16 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "queue":"nodemon src/queue.js",
+    "queue": "nodemon src/queue.js",
     "dev": "nodemon src/server.js",
     "dev:debug": "nodemon --inspect src/server.js"
   },
   "dependencies": {
+    "@sentry/node": "^5.29.2",
+    "@sentry/tracing": "^5.29.2",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.3.1",
     "body-parser": "^1.19.0",
     "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "express-handlebars": "^5.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.9",
@@ -23,6 +26,7 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
+    "youch": "^2.1.1",
     "yup": "^0.32.8"
   },
   "devDependencies": {
